--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        implementation platform('com.google.firebase:firebase-bom:29.2.1')
+        implementation 'com.google.firebase:firebase-auth'
     }
 }
 
